tercera actualizacion proyecto final

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     cascadas en donde los visitantes tienen la posibilidad de practicar deportes extremos. De igual
                     manera, se puede disfrutar de diferentes platos tradicionales de esta región del país.</p>
                 <br>
-                <p>Una de las principales razones para visitar este hermoso lugar es tener la oportunidad de estar en
+                <p class="ocultar">Una de las principales razones para visitar este hermoso lugar es tener la oportunidad de estar en
                     contacto con la naturaleza. Este paraíso turístico de los tolimenses ofrece a sus visitantes una
                     experiencia única, donde podrán bañarse y disfrutar de unas maravillosas cascadas de agua cristalina
                     y refrescante. Además de gozar de un clima increíble (más de 30 °C), y de una magnífica brisa.</p>
@@ -80,8 +80,8 @@
             <img class="borde" src="img/catedral ibague.jfif" alt="foto">
         </div>
         <div class="col">
-            <img class="celular" src="img/reserva_orquideas.png" alt="foto">
-            <div class="grupo abajo">
+            <img class="celular3" src="img/reserva_orquideas.png" alt="foto">
+            <div class="grupo abajo3">
                 <h3>Reserva Natural de Orquideas del Tolima</h3>
                 <p>Una especie de museo vivo es el que los viajeros pueden visitar en la Reserva Natural Orquídeas del
                     Tolima, en el barrio Darío Echandía, en el sur de Ibagué. Este sitio, que mide 22 ha, cuenta con
@@ -101,8 +101,8 @@
             <img class="borde" src="img/Embalse de Prado Tolima.jpg" alt="foto">
         </div>
         <div class="col">
-            <img class="celular" src="img/Tolima-Honda-MuseoRioMagdalena.jpg" alt="foto">
-            <div class="grupo abajo">
+            <img class="celular4" src="img/Tolima-Honda-MuseoRioMagdalena.jpg" alt="foto">
+            <div class="grupo abajo4">
                 <h3>Museo del Rio Magdalena</h3>
                 <p>El Museo del Río Magdalena se encuentra ubicado en Honda, Tolima, en el antiguo edificio conocido
                     como el cuartel de La Ceiba. En el año 2009 Margarita Reyes S. Coordinadora del Grupo de Patrimonio
@@ -168,8 +168,8 @@
             <img class="borde" src="img/jardinbotanico.jpg" alt="foto">
         </div>
         <div class="col">
-            <img class="celular" src="img/Cuevas-de-copete-.jpg" alt="foto">
-            <div class="grupo abajo">
+            <img class=" fin" src="img/Cuevas-de-copete-.jpg" alt="foto">
+            <div class="grupo abajo5">
                 <h3>Las Cuevas de Tuluní.</h3>
                 <p>Las Cuevas de Tuluní, ubicadas en la vereda Tuluní del municipio de Chaparral departamento del Tolima; se encuentran a una distancia de 2 horas y media de la ciudad de Ibagué y a 4 horas y media de la ciudad de Bogotá. En estas magníficas cuevas encontramos formaciones naturales constituidas con fragmentos de roca, que contienen estalagmitas y estalactitas calizas mezcladas con metales iridiscentes, en cavidades de hasta cuarenta metros de altura en su elevación mayor.
                 </p>
