--- a/index_2.html
+++ b/index_2.html
@@ -84,7 +84,7 @@
             <img class="disminuir borde" src="img/viudo.jfif" alt="foto">
         </div>
 
-        <div class="col">
+        <div class="col acomodar">
             <div id="principal">
                 <div class="carrusel" id="car1">
         
@@ -181,8 +181,9 @@
                 <p>La chicha según los cayaimunos que se reúnen en la plaza de los chicheros o en las distintas veredas,
                     es una tradición que no están dispuestos a dejar acabar, pues con ella, con la chicha, sus familias
                     de origen indígena mantienen el amor por la comida ancestral.
+                </p>
                     <br>
-                    “La chicha desde que esté bien preparada usted la puede dejar entre ocho y quince días y la puede
+                <p class="ocultar">“La chicha desde que esté bien preparada usted la puede dejar entre ocho y quince días y la puede
                     tomar sin riesgo”, cuenta la joven chichera que recuerda que su tradición viene de parte de su
                     abuela, quien le enseñó la preparación de esta bebida.
                 </p>
@@ -199,8 +200,8 @@
             <img class="borde" src="img/guarapo piña.jpg" alt="foto">
         </div>
         <div class="col">
-            <img class="celular" src="img/caldo.jpg" alt="foto">
-            <div class="grupo abajo">
+            <img class="celular2" src="img/caldo.jpg" alt="foto">
+            <div class="grupo abajo2">
                 <h3>Caldo de claros</h3>
                 <p>Una receta muy particular, ya que se prepara con la sangre de las reses, la cual se cocina en agua
                     con leche hasta formar coágulos. Para algunos no suena tan bien, pero dicen los que lo toman que una
